--- a/index.html
+++ b/index.html
@@ -2,62 +2,36 @@
 
 <html class="theme-auto" lang="en">
 
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Page Title - Change this to your name/brand (50-60 characters recommended) -->
-    <title>Thomas Owen Cross</title>
-    <link rel="icon" type="image/x-icon" href="/images/avatar.png"> <!-- Update this with your own favicon -->
-
-    <!-- Canonical URL - Helps prevent duplicate content issues -->
-    <meta rel="canonical" href="https://thomasocross.com">
-
-    <!-- Author Information -->
-    <meta name="author" content="Owen Cross">
-
-    <!-- Stylesheets -->
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/brands.css">
-
-  </head>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Thomas Owen Cross</title>
+  <link rel="icon" type="image/x-icon" href="/images/avatar.jpg">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/brands.css">
+</head>
 
 <body>
+  <div class="container">
+    <div class="column">
+      <img class="avatar avatar--rounded" src="images/avatar.jpg">
+      <h1>
+        <div>Thomas "Owen" Cross</div>
+      </h1>
+      <div class="button-stack" role="navigation">
+        <!-- Hudl -->
+        <a class="button button-slack" href="https://www.hudl.com/profile/22283337/Thomas-Owen-Cross" target="_blank"
+          rel="noopener" role="button"><img class="icon" src="images/icons/hudl.jpg" alt="" />hudl</a>
 
-    <div class="container">
-        <div class="column">
+        <!-- MaxPreps -->
+        <a class="button button-slack"
+          href="https://www.maxpreps.com/fl/tampa/king-lions/athletes/thomas-owen-cross/?careerid=l2vqpahj7a122"
+          target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/maxpreps.png"
+            alt="" />MaxPreps</a>
 
-            <!--
-              By default, the Avatar is rounded. Use the following:
-              - avatar--rounded: Automatically rounds the image
-              - avatar--soft: Slightly rounds the image
-              - avatar--none: Removes any rounding
-
-              Be sure to replace the src with your own image path and update the alt text
-            -->
-            <img class="avatar avatar--rounded" src="images/avatar.png" srcset="images/avatar@2x.png 2x" alt="LittleLink">
-
-            <!-- Replace with your name or brand -->
-            <h1>
-              <div>Thomas "Owen" Cross</div>
-            </h1>
-
-            <!-- All your buttons go here -->
-            <div class="button-stack" role="navigation">
-
-          <!-- Hudl -->
-          <a
-            class="button button-slack"
-            href="https://www.hudl.com/profile/19330657/Edward-Cross"
-            target="_blank"
-            rel="noopener"
-            role="button"
-            ><img class="icon" src="images/m/hudl.jpg" alt="" />hudl</a
-          >
-
-          <!-- Google Drive Resume? -->
-          <!-- <a
+        <!-- Google Drive Resume -->
+        <!-- <a
             class="button button-google-black"
             href="#"
             target="_blank"
@@ -67,20 +41,12 @@
             in Google Drive</a
           > -->
 
-          <!-- LinkedIn -->
-          <a
-            class="button button-linked"
-            href="#"
-            target="_blank"
-            rel="noopener"
-            role="button"
-            ><img
-              class="icon"
-              src="images/icons/linkedin.svg"
-              alt=""
-            />LinkedIn</a>
+        <!-- LinkedIn -->
+        <a class="button button-linked" href="https://www.linkedin.com/in/owen-cross-0bba38390/" target="_blank"
+          rel="noopener" role="button"><img class="icon" src="images/icons/linkedin.svg" alt="" />LinkedIn</a>
       </div>
     </div>
   </div>
 </body>
+
 </html>
